use firebase database & handle loading & error

--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -11,6 +11,16 @@
   padding: 0;
 }
 
+.MealsError {
+  text-align: center;
+  color: red;
+}
+
+.MealsLoading {
+  text-align: center;
+  color: white;
+}
+
 @keyframes meals-appear {
   from {
     opacity: 0;
